@startuml BDD - Schéma conceptuel
title BDD - Schéma conceptuel
!theme plain
hide circle
skinparam linetype ortho

entity Item{
    <u>id</u>
    --
    name
    priceExVAT
    VATPercentage
    leftInStock
    description
    image
}
entity Category{
    <u>name</u>
    --
    description
}
entity Referent{
    <u>id</u>
    --
    designation
    firstName
    lastName
    birthDate
    isAlive
    nickname[0..1]
    website [0..1]
}
entity SchoolOfThough{
    <u>id</u>
    --
    name
    description
}
entity Order{
    <u>id</u>
    --
    creationTime
}
entity Client{
    <u>id</u>
    --
    firstName
    lastName
}
entity OrderLine{
    --
    quantity
    priceAtTheTime
}
note top of OrderLine : id(OrderLine) : id(Order), id(Item)
entity Coupon{
    <u>code</u>
    --
    discountPercentage
}
entity Employee {
    <u>id</u>
    --
    firstName
    lastName
    hiringDate
    salary
}
entity Country{
    <u>name</u>
    --
    isSupported
}
entity Locality{
    <u>id</u>
    --
    name 
    zipCode 
    isSupported
}
entity DeliveryAddress{
    <u>id</u>
    --
    isPickupPoint
    numInStreet
    streetName
    box [0..1]
}

note top of DeliveryAddress : Is only created when selected,\n except for pickup points

' Relations
Order ||--o{ OrderLine
OrderLine }o--|| Item
Order }o--o{ Coupon : Reductions
Order }o--|| Employee : Encoding
Locality ||--o{ DeliveryAddress
Country ||--o{ Locality
Referent }o--o| SchoolOfThough
Referent |o--|| DeliveryAddress
Referent }o--o{ Item
Item }o--|| Category
Client }o--|| DeliveryAddress
Client ||--o{ Order : Shipping

@enduml